--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true,  
+    "incremental": true,
+    "noImplicitAny": false,
     "plugins": [
       {
         "name": "next"
