--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "tsx src/server.ts",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && prisma db push && next build",
     "start": "NODE_ENV=production tsx src/server.ts",
     "lint": "next lint",
     "seed": "node prisma/seed.ts",
