--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@prisma/client": "^5.17.0",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.9.0",
     "jose": "^5.7.0",
     "js-cookie": "^3.0.5",
