--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.17.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.9.0",
+    "@vercel/speed-insights": "^1.0.12",
     "jose": "^5.7.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
