--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.9.0",
     "@vercel/speed-insights": "^1.0.12",
+    "bcrypt": "^5.1.1",
     "jose": "^5.7.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
